sns-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sns-api-deployment
  labels:
    app: sns-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sns-api
  template:
    metadata:
      labels:
        app: sns-api
    spec:
      containers:
      - name: sns-api-container
        image: localhost:32000/sns-api:v1
        ports:
        - containerPort: 5000
