mongodb-hdservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-hdservice
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
