sns-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sns-api-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30001
  selector:
    app: snsrestapi
