ingress-scgrp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-scgrp
  namespace: sandbox
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issuer: my-ca-issuer
    cert-manager.io/common-name: vuscgrp.com
spec:
  tls: 
  - hosts: 
    - vuscgrp.com
    secretName: myingress-cert
  rules:
  - host: vuscgrp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
              
  ingressClassName: nginx
